[package]
name = "rpg_game_bevy"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

# When releasing for web, can pass --profile wasm-release to cargo instead of --release.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
# Remove dynamic_linking for the release build
#bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy = { version = "0.16.1" }
bevy_ecs_tiled = "0.7.3"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
